# streamlet-transparency-logging

./: .gitignore  Cargo.toml  LICENSE  README.md  run_network.py
cs244b_project/: Cargo.toml  directory_data.json  process_logs.py  requirements.txt  test_driver.py  tst.txt
cs244b_project/src/: app.rs  application.rs  lib.rs  main.rs  network.rs  peer_init.rs
cs244b_project/src/app/: app.rs  app_client.rs  app_interface.rs  mod.rs  public-log-demo.rs
cs244b_project/src/blockchain/: block.rs  blocks.rs  chain.rs  manager.rs  mod.rs
cs244b_project/src/message/: message.rs  mod.rs
cs244b_project/src/messages/: messages.rs  mod.rs
cs244b_project/src/network/: mod.rs  network.rs  peer_init.rs
cs244b_project/src/player/: player.rs
cs244b_project/src/tmp/: player1.txt  player2.txt  player3.txt  pub.txt  test1.txt  test2.txt  test3.txt  test4.txt
cs244b_project/src/utils/: mod.rs
hello_world/: .run_network.py.swp  README.md  run_network.py
hello_world/src/: main.rs
message_passing/src/: main.rs
p2p_network_test/: Cargo.toml
p2p_network_test/src/: main.rs  network.rs
rust-blockchain-example/: Cargo.toml
rust-blockchain-example/network_data/: simple_data.json
rust-blockchain-example/src/: main.rs  network_dir.rs  p2p.rs
rust-blockchain-example/src/blockchain/: blocks.rs
rust-blockchain-example/src/messages/: messages.rs
src/: block.rs  chain.rs  lib.rs  main.rs
src/blockchain_utils/: block.rs  chain.rs  mod.rs
src/node_utils/: message.rs  mod.rs  player.rs
streamlet/: Cargo.toml
streamlet/src/: lib.rs  main.rs
streamlet/src/blockchain/: blocks.rs
streamlet/src/messages/: messages.rs
streamlet/src/utils/: blocks.rs  crypto.rs  messages.rs  mod.rs
