[package]
name = "cs244b_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
sha2 = "0.9.8"
serde = {version = "1.0", features = ["derive"] }
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
serde_json = "1.0"
serde_with = { version = "1.13.0", features = ["json"] }
libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
tokio = { version = "1.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time"] }
hex = "0.4"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.7.0"
bincode = "1.3.3"
itertools = "0.10.3"