[package]
name = "p2p_network_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# JSON serialization and deserialization (simplest)
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
# LibP2P: most recent version
# - FloodSub is a default features
# - TCP-tokio we have to specify 
# - https://github.com/libp2p/rust-libp2p/blob/master/Cargo.toml
# - To compile: may need to add more swap - https://github.com/paritytech/polkadot/issues/226
libp2p = { version = "0.44.0", default-features = false, features = [
        "tcp-tokio",
        "floodsub",
        "mdns",
        "mplex",
        "noise"] }
# - Can come back to this to be more specific about what we need
tokio = { version = "1.0", features = ["full"] }

