[package]
name = "streamlet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
sha2 = "0.10.2"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
